cmake_minimum_required(VERSION 3.26.5)
project(linux_program_study)

set(CMAKE_CXX_STANDARD 20)

add_executable(linux_program_study main.cpp)

add_subdirectory(01_file_dir)
add_subdirectory(02_io)
add_subdirectory(03_process)
add_subdirectory(04_thread)
add_subdirectory(05_ipc)
add_subdirectory(06_system_v_ipc)
add_subdirectory(07_network_overview)
add_subdirectory(08_tcp)
add_subdirectory(09_server_model)
add_subdirectory(10_network_advanced)
add_subdirectory(11_sqlite)

add_subdirectory(31_network_socket)
add_subdirectory(32_socket_type_protocol)
add_subdirectory(33_address_family_data_sequence)
add_subdirectory(34_tcp_server_client_1)
add_subdirectory(35_tcp_server_client_2)
add_subdirectory(36_udp_server_client)
add_subdirectory(37_elegant_close_connect)
add_subdirectory(38_domain_network_address)
add_subdirectory(39_socket_optional)
add_subdirectory(40_multi_process_server)
add_subdirectory(41_inter_process_communication)
add_subdirectory(42_io_reuse)
add_subdirectory(43_multi_io_function)
add_subdirectory(44_multicast_broadcast)
add_subdirectory(45_socket_standard_io)
add_subdirectory(46_io_stream_separate)
add_subdirectory(47_epoll)
add_subdirectory(48_multi_thread_server)